--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
+        }
+        h1{
+            font-size: 1rem;
+            color: #bbbbbb;
+            font-weight: 400;
+            position: absolute;
+            top: 150px;
         }
 
         .container {
@@ -104,6 +112,7 @@
 
 <body>
     <main>
+        <h1>Refresh page for random profile</h1>
         <div class="container">
             <div class="pic"><img src="" alt=""></div>
             <div class="details">
