--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            position: relative;
+            flex-direction: column;
+            gap: 20px;
         }
         h1{
             font-size: 1rem;
             color: #bbbbbb;
             font-weight: 400;
-            position: absolute;
-            top: 150px;
         }
 
         .container {
